Etude type de données

--- a/P3 Brouillon modele.ipynb
+++ b/P3 Brouillon modele.ipynb
@@ -645,6 +645,28 @@
     "error = round((1 - modelKNN.score(xtest, ytest)) *100,ndigits=2)\n",
     "print('Erreur: %f' % error)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ad415203",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'wait' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mwait\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'wait' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "wait"
+   ]
   }
  ],
  "metadata": {
