--- a/P3 Sélection de variable & Feature Engenering Brouillon .ipynb
+++ b/P3 Sélection de variable & Feature Engenering Brouillon .ipynb
@@ -6009,11 +6009,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d275cf38",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eerr'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"eerr\""
+   ]
   }
  ],
  "metadata": {
