Completer nutri score

--- a/P3 Brouillon modele.ipynb
+++ b/P3 Brouillon modele.ipynb
@@ -1008,17 +1008,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8563cb1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### KNN\n",
-    "from sklearn import neighbors"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5ec782f5",
    "metadata": {},
@@ -1033,6 +1022,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### KNN\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
     "kmintest = 2\n",
     "kmaxtotest = 15\n",
     "errors = []\n",
